syntax = "proto3";
package game.room;

option java_package = "com.zunf.tankbattletcpserver.grpc.game.room";
option java_outer_classname = "GameRoomClientProto";

enum RoomStatus {
  WAITING = 0;
  STARTING = 1;
  PLAYING = 2;
}

enum UserStatus {
  LOBBY = 0;
  READY = 1;
  GAMING = 2;
}

message CreateRequest {
  string name = 1;
  int32 maxPlayers = 2;
  int64 playerId = 3;
}

message CreateResponse {
  int64 roomId = 1;
}

// 获取房间列表 begin
message PageRequest {
  int32 pageNum = 1;
  int32 pageSize = 2;
}

message PageResponse {
  repeated GameRoomData data = 1;
  int32 total = 2;
}

message GameRoomData {
  int64 id = 1;
  string name = 2;
  int32 maxPlayers = 3;
  int32 nowPlayers = 4;
  RoomStatus status = 5;
}
// 获取房间列表  end

// 加入房间  begin
message JoinRequest {
  int64 roomId = 1;
  int64 playerId = 2;
}

message GameRoomDetail {
  int64 id = 1;
  string name = 2;
  int32 maxPlayers = 3;
  int64 creatorId = 4;
  RoomStatus status = 5;
  repeated PlayerInfo players = 6;
}

message PlayerInfo {
  int64 playerId = 1;
  string nickName = 2;
  UserStatus status = 3;
}
// 加入房间  end

// 离开房间
message LeaveRequest {
  int64 roomId = 1;
  int64 playerId = 2;
}

// 准备
message ReadyRequest {
  int64 roomId = 1;
  int64 playerId = 2;
}

message StartRequest {
  int64 roomId = 1;
  int64 playerId = 2;
}
